--- a/style2.css
+++ b/style2.css
@@ -82,101 +82,98 @@ header img{
 /*ASIDE*/
 
 #aside{
-padding-inline: 25%;      
+    width: fit-content;
+    padding-inline: 25%
+       
 }
 #aside h3{
     font-size: 1.7rem;
 }
 #aside-section{
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: flex; 
+    justify-content: space-between;
     gap: 1rem;
 }
 .aside-article{
+    margin: 1rem;
+    padding: 1.2rem;
     border: 2px solid black;
-    border-radius: 8px;
+    border-radius: 25px;
     width: fit-content;
-    height: fit-content;    
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    
+    
 }
-.banner{
-    padding: .2rem;
-    justify-content:center ;    
-}
-.banner a img{   
-    border-radius: 8px;
-    width: 100%;   
+.banner img{
+    width: 280px;
+    
+    
 }
 .aside-article h4{
-    font-size: 1.5rem;
-    
+    font-size: 1.2rem;
+    padding-block: 1rem .3rem;
 }
 .aside-article p{
-    font-size: 1rem;
-    
+    font-size: .95rem;
+    padding-bottom: 2rem;
 }
 .aside-footer{
-    width: fit-content;
     display: flex; 
     justify-content: space-between;
 }
-.aside-footer ul{
-    width: fit-content;     
-}
 .client{
-    font-size: 1rem;    
+    font-size: .95rem;
+    padding-bottom: .3rem;
 }
-.area{    
-    font-size: .8rem;
+.area{
+    font-size: .7rem;
     color: grey;
 }
 
+
 .clip img{
-     width: 2rem;
+    width: 2rem;
 }
 
 #article-works{
-    background-color: tomato;    
+    width: fit-content;
+    margin:0 auto;
 }
 #works-title{
-    text-align: center;
-    border: 4px solid blue;
+    width: fit-content;
+    margin:0 auto;
 }
 #works-img{
-
     display: flex;
     flex-direction: row;
-    border: 4px solid green;
 }
-
-
 
 /*Section (Conocimientos)*/
 
 #list-con{
-    
+    display: flex;
+    align-content: center;
     
 }
 
 .item-con{
-    
+    display: block;
+    flex-direction: column;
+    margin: .5rem;
     width: fit-content;
     height: fit-content;
     border: 1px solid black;
-    
+    align-content: center;
 }
 .item-con p{
     width: fit-content;
     margin: 0 auto;
 }
 .item-con img{
+    margin: 0 auto;
+    margin: .3rem;
     width: 3rem;
 }
-
-
-
-
-
 
