--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: Arial, Helvetica, sans-serif;   
 }
 /*HEADER*/
 
@@ -87,18 +86,16 @@ padding-inline: 25%;
     font-size: 1.7rem;
 }
 #aside-section{
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(1, 1fr); 
+    gap: 10px; 
 }
 .aside-article{
     border: 2px solid black;
     border-radius: 8px;
     width: fit-content;
-    height: fit-content;    
+        
 }
 .banner{
     padding: .2rem;
@@ -174,8 +171,8 @@ padding-inline: 25%;
 }
 #grid-con{
     display: grid;
-    grid-template-columns: repeat(5, 1fr); 
-    grid-template-rows: repeat(3, 100px);
+    grid-template-columns: repeat(5, auto); 
+    grid-template-rows: repeat(3, auto);
     gap: 1rem;
 }
 .colum-con li{
@@ -233,6 +230,7 @@ footer{
     font-size: 1.2rem;
     filter: invert(50%);
 }
+
 
 
 
