--- a/style-tienda.css
+++ b/style-tienda.css
@@ -6,6 +6,9 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;    
 }
+a:link, a:visited, a:hover, a:active {
+    color: black;
+}
 
 /*HEADER*/
 
