--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;   
 }
+
 /*HEADER*/
 
 #header{
@@ -193,7 +194,9 @@ padding-inline: 25%;
     margin: 0 auto;
 }
 .item-con img{
-    margin-inline: 25%;
+    display: flex;
+    background-color: blueviolet;
+    margin-inline: auto;
     width: 3rem;
 }
 
