--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header img{
     font-size: 3.4rem;
     /* color: rgb(67, 127, 255); */
     background-image: linear-gradient(166deg, rgba(90,32,205,1) 0%, rgba(26,121,115,1) 50%);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 #main h4{
